# cc

./: .dockerignore  .gitignore  BLOB_DETECTOR_COMPLETE.md  BLOB_DETECTOR_REQUIREMENTS.md  BUILD.md  CLOUD_DEPLOYMENT_PLAN.md  CMakeLists.txt  CSV出力仕様.md  DOCKER_README.md  Dockerfile  EDGE_DETECTOR_COMPLETE.md  EDGE_DETECTOR_REQUIREMENTS.md  FRONTEND_REQUIREMENTS.md  FRONTEND_TECH_DECISION.md  IMPLEMENTATION_STATUS.md  PROGRESS.md  README.md  React移行計画.md  TASKS.md  TROUBLESHOOTING.md  build-docker.sh  claude.md  docker-compose.prod.yml  docker-compose.yml  main  main.cpp  project.md  実装計画.md  要件.md  通信フォーマット設計.md  開発メモ.md
config/: default_config.json
data/output/csv/: api_results.csv  server_results.csv  test_append.csv  test_batch_20251119_194442.csv  test_inspection_20251119_194442.csv  trigger_results.csv
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  inspection.ts
include/: InspectionController.h
include/detectors/: BlobDetector.h  Defect.h  DetectorBase.h  EdgeDetector.h  FeatureDetector.h  TemplateMatcher.h
include/filters/: FilterBase.h  GaussianFilter.h  GrayscaleFilter.h  ThresholdFilter.h
include/io/: CSVWriter.h  ImageIO.h  ImageSaver.h
include/pipeline/: Pipeline.h
include/server/: ExternalTriggerHandler.h  InspectionServer.h  RestApiServer.h
include/utils/: Base64.h  ConfigManager.h  Logger.h
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
nginx/: nginx.conf
src/: demo_template_matcher.cpp  main.cpp  server_main.cpp
src/controllers/: InspectionController.cpp
src/detectors/: BlobDetector.cpp  Defect.cpp  DetectorBase.cpp  EdgeDetector.cpp  FeatureDetector.cpp  TemplateMatcher.cpp
src/filters/: GaussianFilter.cpp  GrayscaleFilter.cpp  ThresholdFilter.cpp
src/io/: CSVWriter.cpp  ImageIO.cpp  ImageSaver.cpp
src/pipeline/: Pipeline.cpp
src/server/: ExternalTriggerHandler.cpp  InspectionServer.cpp  RestApiServer.cpp
src/ui/: InspectionUI.cpp
src/utils/: Base64.cpp  ConfigManager.cpp  Logger.cpp
tests/: create_blob_samples.cpp  test_blob_detector.cpp  test_csv_image_saver.cpp  test_defect.cpp  test_detector_base.cpp  test_edge_detector.cpp  test_external_trigger.cpp  test_rest_api.cpp  test_template_matcher.cpp
